[package]
name = "led-o-lattern"
version = "0.1.0"
authors = ["Joey Hines <joey@ahines.net>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.5.2", features = ["rt", "stm32f103" ] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.8", features = ["device"] }
panic-semihosting = "0.5.2"
rand = { version = "0.7.3", default_features = false}
